@@ -25,5 +25,7 @@ echo 'Test with (e.g.)'
 echo '       LANGUAGE=de R --no-environ --no-save' ; echo ''
 echo 'and then something like'
 echo '       Matrix(1:6, 2,3) %*% Matrix(1:4, 2)'; echo ''
-echo 'Commit with something like'
+echo 'Do check that you did *not* forget one of the *.po or generated *.mo files, via'; echo ''
+echo "       svn st -v po inst/po  | grep '^?'"; echo ''
+echo 'and commit with something like'
 echo "       svn ci -m'translation updates'  po  inst/po"; echo ''
